<resources>
    <!--main screen start-->
    <string name="app_name">Playlist maker</string>
    <string name="search_text">Поиск</string>
    <string name="media_text">Медиатека</string>
    <string name="settings_text">Настройки</string>
    <!--main screen end-->

    <!--settings screen start-->
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_text">https://practicum.yandex.ru/android-developer/</string>
    <string name="user_email">klintsov.p@mail.ru</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <!--settings screen end-->

    <string name="search_text_icon">search_text_icon</string>
    <string name="search_delete_text_icon">search_delete_text_icon</string>
    <string name="separator_band_length">Separator_band_length</string>
    <string name="track_cover">Track_cover</string>
    <string name="forward_arrow">forward_arrow</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="no_download">Загрузка не удалась. Проверьте</string>
    <string name="check_net">подключение к интернету</string>
    <string name="reload">Обновить</string>
    <string name="emptyString" />
    <string name="you_have_searched">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="example_song_time">0:30</string>
    <string name="song_length">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="timer_00">00:00</string>
    <string name="Media_library">Медиатека</string>
    <string name="media_library_is_empty">Ваша медиатека пуста</string>
    <string name="no_playlists_yet">Вы не создали</string>
    <string name="no_playlists_yet2">ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="create">Создать</string>
    <string name="add_playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="share_playlist">Поделиться</string>
    <string name="playlist_edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="no_tracks_in_playlist">В плейлисте пока нет треков</string>

</resources>