<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/side_padding"
    android:paddingBottom="28dp">

    <Button
        android:id="@+id/buttonBackFromSettings"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="40dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif-medium"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="start|center_vertical"
        android:includeFontPadding="true"
        android:text="@string/settings_text"
        android:textAllCaps="false"
        android:textColor="@color/icon"
        android:textFontWeight="500"
        android:textSize="@dimen/main_menu_text_size"
        android:visibility="visible"
        app:cornerRadius="0dp"
        app:icon="@drawable/arrow_back_vector"
        app:iconGravity="textStart"
        app:iconPadding="28dp"
        app:iconTint="@color/icon" />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_menu_buttons_height"
        android:layout_marginBottom="@dimen/main_menu_buttons_bottom_padding"
        android:autoSizeTextType="none"
        android:paddingStart="0dp"
        android:paddingEnd="-4dp"
        android:switchMinWidth="32dp"
        android:text="@string/dark_theme"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="@dimen/settings_text_size" />

    <Button
        android:id="@+id/buttonShareApp"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_menu_buttons_height"
        android:layout_marginBottom="@dimen/main_menu_buttons_bottom_padding"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif-light"
        android:gravity="start|center_vertical"
        android:paddingStart="0sp"
        android:paddingEnd="0sp"
        android:text="@string/share_app"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="@dimen/settings_text_size"
        app:cornerRadius="0dp"
        app:icon="@drawable/share_vector"
        app:iconGravity="end"
        app:iconTint="@color/settings_icon" />

    <Button
        android:id="@+id/buttonWriteToSupport"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_menu_buttons_height"
        android:layout_marginBottom="@dimen/main_menu_buttons_bottom_padding"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif-light"
        android:gravity="start|center_vertical"
        android:paddingStart="0sp"
        android:paddingEnd="0sp"
        android:text="@string/support"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="@dimen/settings_text_size"
        app:cornerRadius="0dp"
        app:icon="@drawable/support_vector"
        app:iconGravity="end"
        app:iconTint="@color/settings_icon" />

    <Button
        android:id="@+id/buttonUserAgreement"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_menu_buttons_height"
        android:layout_marginBottom="@dimen/main_menu_buttons_bottom_padding"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif-light"
        android:gravity="start|center_vertical"
        android:paddingStart="0sp"
        android:paddingEnd="0sp"
        android:text="@string/user_agreement"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="@dimen/settings_text_size"
        app:cornerRadius="0dp"
        app:icon="@drawable/forward_arrow_vector"
        app:iconGravity="end"
        app:iconTint="@color/settings_icon" />

</LinearLayout>