<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginHorizontal="16dp">

    <ImageView
        android:id="@+id/ivCover"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/track_cover"
        android:src="@drawable/vector_cover_placeholder"/>

    <LinearLayout
        android:id="@+id/rootInsideLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="Yesterday (Remastered 2009)" />

        <LinearLayout
            android:id="@+id/rootInsideLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tvBand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                tools:text="The Beatles" />

            <ImageView
                android:id="@+id/ivPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/separator_band_length"
                android:src="@drawable/vector_point_separator" />

            <TextView
                android:id="@+id/tvLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                tools:text="2:55" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/ivForwardArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/forward_arrow"
        android:src="@drawable/forward_arrow_vector"/>

</LinearLayout>