<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnTertiaryContainer">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/toolbar_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="?attr/actionBarSize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createNewPlaylistButton"
        style="@style/createPlaylistButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/creating_new_playlist_button_selector"
        android:enabled="false"
        android:letterSpacing="0.02"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints="true"
        android:hint="@string/playlist_description_hint"
        android:paddingHorizontal="16dp"
        android:textColorHint="?attr/colorOnTertiary"
        android:textCursorDrawable="@drawable/cursor_vector"
        android:layout_marginTop="@dimen/side_padding_16"
        app:boxStrokeColor="@color/input_stroke_color"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="@color/menu_chosen"
        app:layout_constraintEnd_toEndOf="@id/right_border_16"
        app:layout_constraintStart_toStartOf="@id/left_border_16"
        app:layout_constraintTop_toBottomOf="@id/name_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_fill_playlist_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="center_vertical"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColor="?attr/colorOnTertiary"
            android:paddingHorizontal="16dp"
            android:textCursorDrawable="@drawable/cursor_vector"
            android:textFontWeight="400"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints="true"
        android:hint="@string/add_playlist_name_hint"
        android:paddingHorizontal="16dp"
        android:textColorHint="?attr/colorOnTertiary"
        android:textCursorDrawable="@drawable/cursor_vector"
        app:boxStrokeColor="@color/input_stroke_color"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="@color/menu_chosen"
        app:layout_constraintBottom_toTopOf="@id/description_input_layout"
        app:layout_constraintEnd_toEndOf="@id/right_border_16"
        app:layout_constraintStart_toStartOf="@id/left_border_16"
        app:layout_constraintTop_toBottomOf="@id/description_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_fill_playlist_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="center_vertical"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="text"
            android:textColor="?attr/colorOnTertiary"
            android:paddingHorizontal="16dp"
            android:textCursorDrawable="@drawable/cursor_vector"
            android:textFontWeight="400"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_new_playlist_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="32dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/name_input_layout"
        app:layout_constraintDimensionRatio="w, 1:1"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/toolbar_border">

        <ImageView
            android:id="@+id/imageCover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/adding_playlist_cover_background"
            android:clickable="true"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@id/toolbar_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back_vector"
        app:title="@string/new_playlist" />

</androidx.constraintlayout.widget.ConstraintLayout>